<resources>
    <string name="app_name">Berrantinho</string>
    <string name="menu_main_settings">Configurações</string>
    <string name="menu_main_halp">Ajuda</string>
    <string name="menu_main_about">Sobre</string>
    <string name="menu_main_share">Compartilhar</string>
    <string name="settings">Configurações</string>

    <string name="file_provider_authority" translatable="false">com.example.joao.berrantinho.fileprovider</string>

    <string name="activity_notification">Notification</string>
    <string name="activity_suplementacao">Suplementacao</string>
    <string name="activity_toolbar">Simple Toolbar</string>
    <string name="activity_files">File Notes</string>

    <string name="btn_start_notification_label">Notificação</string>
    <string name="btn_start_suplementacao_label">Suplementacao</string>
    <string name="btn_start_toolbar_label">Toolbar</string>
    <string name="btn_start_bolinha_label">Produtos(Lista)</string>
    <string name="btn_start_dialog_label">Dialog</string>

    <string name="post_notification">Post Notification</string>
    <string name="channel_one_title">Reposição de Suplementos</string>
    <string name="channel_one_text_hint">Conteudo Notificação</string>

    <string name="filter_title">Suplementação</string>
    <string name="vazio">Vazio</string>
    <string name="repor">Repor</string>
    <string name="com_produto">Com Produto</string>
    <string name="todos">Todos</string>
    <string name="lengeda">lengeda: N/C - não calculado</string>

    <string name="dumb_large_text_I">I tried to create a list in my fragment, where I created a card view and using an adapter I populated the list with the card view. But the issue I am facing is, In my android studio XML layout, You can see a margin at both left and right of the screen, while when I installed on my phone, the margin is not seen!!</string>
    <string name="dumb_large_text_II">A Barrier is a virtual view, similar to a Guideline, to which we can constrain objects. The difference between a Barrier and a Guideline is that the position of a Barrier is determined by the dimensions of multiple views. In the case of our example, we don’t know whether textView1 or textView2 will be wider, so we can create a Barrier based upon the widths of these two Views. Then we can constrain textView3 to the Barrier.</string>

    <string name="activity_fabrica">Fabrica de Suplementos</string>
    <string name="item_fabricasuplementos_batida_volume_label">Volume Batida:</string>
    <string name="item_fabricasuplementos_embalagem_label">Embalagem</string>
    <string name="item_fabricasuplementos_embalagem_quantidade_label">Quantidade Minima:</string>
    <string name="item_fabricasuplementos_embalagem_volume_unitario_label">Volume:</string>
    <string name="item_fabricasuplementos_produto_ingredientes_label">Ingredientes</string>
    <string name="item_fabricasuplementos_produto_ingredientes_list_dummy">Ingrediente 01 - 10kg\nIngrediente 02 - 30kg\nIngrediente 04 - 40kg\nIngrediente 05 - 30kg</string>

    <!-- Dialog-->
    <string name="dialog_title">NomeProduto</string>
    <string name="mensagem">Mensagem</string>
    <string name="dialog_btn_nao">nao</string>
    <string name="dialog_btn_sim">sim</string>
    <string name="dialog_message">Deseja misturar com esse produto?</string>

    <string name="item_fabricasuplementos_produto_name_label">Produto:</string>
    <string name="item_fabricasuplementos_volumes_label">Volumes:</string>
    <string name="item_fabricasuplementos_volume_embalagem_label">Embalagem</string>
    <string name="item_fabricasuplementos_volume_batida_label">Batida</string>
    <string name="item_fabricasuplementos_ingredientes_label">ingredientes</string>
    <string name="item_fabricasuplementos_ingredientes_dummy_list">Ingrediente 01 - 10kg\nIngrediente 02 - 30kg\nIngrediente 04 - 40kg\nIngrediente 05 - 30kg</string>
    <string name="badNumber">numero invalido</string>
    <string name="suplementacao_btn_salvar_label">salvar</string>
    <string name="suplementacao_btn_finalizar_label">finalizar</string>
    <string name="suplementacao_saco_parcial_label">saco parcial</string>
    <string name="suplementacao_btn_plus_label">+</string>
    <string name="suplementacao_btn_minus_label">-</string>
    <string name="suplementacao_sacos_cheios_label">sacos cheios</string>
    <string name="suplementacao_abastecer_cocho_label">abastecer cocho</string>
    <string name="suplementacao_spn_produto_label">produto</string>
    <string name="suplementacao_spn_localidade_label">localidade</string>
    <string name="title_activity_flower">FlowerActivity</string>
    <string name="label">LabelForAutoComplete</string>
    <string name="show_number">show number</string>

    <!-- authentication -->
    <string name="account_type">com.example.joao.berrantinho</string>
    <string name="title_sign_in">Login</string>
    <string name="preference_account_file_key">shared_preferences_identifier</string>
    <string name="preference_account_name">preference_account_name</string>
    <string name="preference_account_type">account_type</string>
    <string name="hint_username">Usuário</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="err_msg_name">usuario invalido</string>
    <string name="err_msg_password">senha invalida</string>
    <string name="err_msg_email">email invalido</string>

    <string name="hint_note_creation">Enter you note here…</string>
    <string name="share">Share</string>

</resources>
