<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/filter_title"
                style="@style/Biox.TextAppearance.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/filter_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter_vazio"
                style="@style/Biox.TextAppearance.Filter"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_warning_black_24dp"
                android:text="@string/vazio"
                app:layout_constraintEnd_toStartOf="@+id/filter_repor"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_title" />

            <TextView
                android:id="@+id/filter_repor"
                style="@style/Biox.TextAppearance.Filter"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_warning_black_24dp"
                android:text="@string/repor"
                app:layout_constraintEnd_toStartOf="@+id/filter_com_produto"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/filter_vazio"
                app:layout_constraintTop_toBottomOf="@+id/filter_title" />

            <TextView
                android:id="@+id/filter_com_produto"
                style="@style/Biox.TextAppearance.Filter"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_warning_black_24dp"
                android:text="@string/com_produto"
                app:layout_constraintEnd_toStartOf="@+id/filter_all"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@+id/filter_repor"
                app:layout_constraintTop_toBottomOf="@+id/filter_title" />

            <TextView
                android:id="@+id/filter_all"
                style="@style/Biox.TextAppearance.Filter"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_warning_black_24dp"
                android:text="@string/todos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/filter_com_produto"
                app:layout_constraintTop_toBottomOf="@+id/filter_title" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_vazio" />

            <TextView
                android:id="@+id/txt_legenda"
                style="@style/Biox.TextAppearance.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/lengeda"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>

