<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:padding="8dp"
    android:scrollbarStyle="outsideOverlay">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Localidade -->
            <TextView
                android:id="@+id/label_localidade"
                style="@style/Biox.TextAppearance.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                android:labelFor="@+id/suplementacao_spinner_localidade"
                android:text="@string/suplementacao_spn_localidade_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/suplementacao_spinner_localidade"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_localidade" />

            <!-- Escolha de Produto  -->
            <TextView
                android:id="@+id/label_produto"
                style="@style/Biox.TextAppearance.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                android:labelFor="@+id/spinner_produto"
                android:text="@string/suplementacao_spn_produto_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suplementacao_spinner_localidade" />

            <Spinner
                android:id="@+id/spinner_produto"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:spinnerMode="dropdown"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_produto" />

            <View
                android:id="@+id/suplementacao_divider"
                style="@style/Divider"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_produto" />

            <TextView
                android:id="@+id/label_abastecer_cocho"
                style="@style/Biox.TextAppearance.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                android:text="@string/suplementacao_abastecer_cocho_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suplementacao_divider" />

            <TextView
                android:id="@+id/label_sacos_cheios"
                style="@style/Biox.TextAppearance.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                android:labelFor="@+id/edt_sacos"
                android:text="@string/suplementacao_sacos_cheios_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_abastecer_cocho" />

            <Button
                android:id="@+id/button_minus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/btn_min_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/md_keylines"
                android:minHeight="@dimen/btn_min_height"
                android:text="@string/suplementacao_btn_minus_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_sacos_cheios" />


            <EditText
                android:id="@+id/edt_sacos"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="@dimen/edt_min_height"
                app:layout_constraintEnd_toStartOf="@+id/button_plus"
                app:layout_constraintStart_toEndOf="@+id/button_minus"
                app:layout_constraintTop_toBottomOf="@+id/label_sacos_cheios"
                tools:text="666" />

            <Button
                android:id="@+id/button_plus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="@dimen/btn_min_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:minHeight="@dimen/btn_min_height"
                android:text="@string/suplementacao_btn_plus_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_minus" />

            <TextView
                android:id="@+id/label_saco_parcial"
                style="@style/Biox.TextAppearance.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_separator"
                android:text="@string/suplementacao_saco_parcial_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_sacos" />


            <TextView
                android:id="@+id/txt_saco_parcial"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:minHeight="@dimen/edt_min_height"
                android:padding="8dp"
                android:text="@string/activity_toolbar"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/frame_saco_parcial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_saco_parcial" />

            <FrameLayout
                android:id="@+id/frame_saco_parcial"
                android:layout_width="@dimen/saco_miniature_size"
                android:layout_height="@dimen/saco_miniature_size"
                android:layout_marginEnd="16dp"
                android:background="@color/azul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_saco_parcial" />


            <Button
                android:id="@+id/button_salvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_marginTop="32dp"
                android:text="@string/suplementacao_btn_salvar_label"
                app:layout_constraintBottom_toTopOf="@+id/button_finalizar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_saco_parcial"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button_finalizar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginEnd="@dimen/md_keylines"
                android:layout_marginStart="@dimen/md_keylines"
                android:text="@string/suplementacao_btn_finalizar_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</ScrollView>




