<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/row_fabricasuplementos_produto_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_fabricasuplementos_produto_name_label"
            android:textAppearance="@style/Biox.TextAppearance.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/row_fabricasuplementos_produto_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Biox.TextAppearance.Body"
            app:layout_constraintBaseline_toBaselineOf="@+id/row_fabricasuplementos_produto_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/row_fabricasuplementos_produto_label"
            tools:text="Produtão" />

        <TextView
            android:id="@+id/row_fabricasuplementos_volumes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_fabricasuplementos_volumes_label"
            android:textAppearance="@style/Biox.TextAppearance.Label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_fabricasuplementos_produto_content" />

        <TextView
            android:id="@+id/row_fabricasuplementos_volume_embalagem_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_fabricasuplementos_volume_embalagem_label"
            android:textAppearance="@style/Biox.TextAppearance.Body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_fabricasuplementos_volumes_label" />

        <TextView
            android:id="@+id/row_fabricasuplementos_volume_batida_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_fabricasuplementos_volume_batida_label"
            android:textAppearance="@style/Biox.TextAppearance.Body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_fabricasuplementos_volume_embalagem_label" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="row_fabricasuplementos_volume_batida_label,row_fabricasuplementos_volume_embalagem_label" />

        <TextView
            android:id="@+id/row_fabricasuplementos_volume_embalagem_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Biox.TextAppearance.Body"
            app:layout_constraintBaseline_toBaselineOf="@+id/row_fabricasuplementos_volume_embalagem_label"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            tools:text="25kg" />

        <TextView
            android:id="@+id/row_fabricasuplementos_volume_batida_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Biox.TextAppearance.Body"
            app:layout_constraintBaseline_toBaselineOf="@+id/row_fabricasuplementos_volume_batida_label"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            tools:text="300kg" />

        <Button
            android:id="@+id/row_fabricasuplementos_ingredientes_label"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/palha"
            android:text="@string/item_fabricasuplementos_ingredientes_label"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/row_fabricasuplementos_ingredientes_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_fabricasuplementos_produto_content" />

        <TextView
            android:id="@+id/row_fabricasuplementos_ingredientes_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/item_fabricasuplementos_ingredientes_dummy_list"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_fabricasuplementos_volume_batida_label" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>